Added execute around

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>callback</module>
       <module>event-asynchronous</module>
       <module>double-checked-locking</module>
+      <module>execute-around</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
