--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>null-object</module>
       <module>value-object</module>
       <module>mutex</module>
+        <module>Module</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
