--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
       <module>value-object</module>
       <module>mutex</module>
         <module>Module</module>
+      <module>lazy-loading</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
