--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>Module</module>
       <module>lazy-loading</module>
       <module>adapter</module>
+        <module>retry</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
