--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>retry</module>
       <module>api-gateway</module>
       <module>builder</module>
+        <module>chain</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
